# jonathan-carnline-portfolio

./: .gitattributes  .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.mjs
.github/workflows/: case-study-tests.yml  pages.yml  runtime-tests.yml
case-studies/bot-runtime-proof/: EVIDENCE_MAP.md  PUBLICATION_CHECKLIST.md  README.md
case-studies/bot-runtime-proof/01-execution-safety/: README.md
case-studies/bot-runtime-proof/02-ninjatrader-bridge/: README.md
case-studies/bot-runtime-proof/03-audit-bundle-ingestion/: README.md
case-studies/bot-runtime-proof/04-feed-observability/: README.md
case-studies/bot-runtime-proof/05-discord-operations-taskboard/: README.md
case-studies/reliable-event-bridge/: .gitignore  EVIDENCE.md  INTERVIEW_NOTES.md  PUBLICATION_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml
case-studies/reliable-event-bridge/docs/: architecture.md
case-studies/reliable-event-bridge/src/reliable_event_bridge/: __init__.py  bridge.py  demo.py
case-studies/reliable-event-bridge/tests/: test_bridge.py
projects/reliable-trading-runtime/: .gitignore  README.md  SECURITY.md  requirements-dev.txt
projects/reliable-trading-runtime/docs/: EMPLOYER_BRIEF.md  HOW_IT_WORKS.md  WHAT_I_OWNED.md
projects/reliable-trading-runtime/simplified/: run_stream_live_csv.py
projects/reliable-trading-runtime/simplified/na/: __init__.py  automation_runtime.py  (+1 more)
projects/reliable-trading-runtime/trading_system/: run_trading_runtime.py
public/: Jonathan_Carnline_Technical_Resume.docx
src/: App.jsx  styles.css
(+417 files in other folders)
